--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="books">
-      <form id="addBook" action="#">
+      <form id="searchBook" action="#">
         <div>
           <label for="title">Title: </label><input id="title" type="text" />
           <label for="author">Author: </label><input id="author" type="text" />
